# legalchatassistanto1

./: .env.example  .gitignore  Dockerfile  README.md  check_cfg.py  create_phase11.sh  create_phase12.sh  create_phase13.sh  create_phase14-17.sh  create_phase18.sh  create_phase19.sh  create_phase20.sh  create_phase21.sh  create_phase22.sh  create_phase7.sh  db_test_app.py  docker-compose.yaml  docker-entrypoint.sh  init_db.py  pyproject.toml  requirements.txt  simple_app.py  test_app.py
.github/workflows/: ci.yaml
backend/: app.py  app.py.orig  config.py  config.py.orig
backend/core/: auth.py  chunking.py  ocr.py  utils.py
backend/db/: database.py  models.py  search.py  vector_store.py
backend/modules/argument_mapper/: __init__.py  graph.py  prompts.py  service.py
backend/modules/brief_skeleton/: service.py
backend/modules/brief_skeleton/templates/: fed_rule33.md
backend/modules/conflict_detector/: nlp.py  service.py
backend/modules/counter_authority/: prompts.py  service.py
backend/modules/issue_spotter/: prompts.py  service.py
backend/modules/strength_score/: service.py
backend/routers/: auth.py  files.py  files.py.orig  files.py.rej  intelligence.py  projects.py.orig  projects.py.rej
frontend/electron/: electron-builder.json  main.ts  package.json  preload.ts  tsconfig.json
frontend/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/ui/src/: App.tsx  index.css  main.tsx
frontend/ui/src/components/: ArgumentMapCanvas.tsx  ConflictCard.tsx  IssueTable.tsx  UploadDropzone.tsx
frontend/ui/src/components/ChatBox/: ChatBox.tsx  MessageBubble.tsx
frontend/ui/src/context/: AuthContext.tsx  ProjectContext.tsx
frontend/ui/src/hooks/: useApi.ts  useArgumentMap.ts  useUpload.ts
frontend/ui/src/routes/: ArgumentMap.tsx  Conflict.tsx  Dashboard.tsx  Drafting.tsx  IssueSpot.tsx  Upload.tsx
migrations/: alembic.ini  env.py
migrations/versions/: 20250421153401_initial.py
scripts/: migrate.py
tests/: conftest.py  test_argument_mapper.py  test_brief_skeleton.py  test_conflict_detector.py  test_counter_authority.py  test_issue_spotter.py  test_strength_score.py
