[tool.poetry]
name = "legal-assistant-ai"
version = "0.1.0"
description = "Post‑Trial Appeals Workbench – FastAPI + Electron/React"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.10"

# ——— Runtime ———
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.9.0"
elasticsearch = "^8.13.2"
langchain = "^0.1.20"
llama-index = "^0.10.41"
networkx = "^3.3"
spacy = "^3.7.4"
scikit-learn = "^1.5.0"
python-dotenv = "^1.0.1"

# ——— Optional LLM embeddings / OCR ———
openai = "^1.26.0"      # comment out if you run local models only
pillow = "^10.3.0"
pytesseract = "^0.3.10"
pymupdf = ">=1.24,<1.26"
python-docx = "^1.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
